--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,54 +1,15 @@
 /*=======================================
     3.0 Header
 ========================================*/
-.ic-header {
+.header {
     overflow: hidden;
 }
-.ic-header .ic-header-top {
-    border-bottom: 1px solid #DFE7F4;
-    padding: .85rem 0;
+
+.header .header-bottom {
+    padding: 30px 0;
 }
-@media only screen and (max-width: 767.98px) {
-    .ic-header .ic-header-top {
-        display: none;
-    }
-}
-.ic-header .ic-header-top .ic-header-top-left ul {
-    list-style: none;
-}
-.ic-header .ic-header-top .ic-header-top-left ul li {
-    display: inline-block;
-    margin-right: 6rem;
-}
-.ic-header .ic-header-top .ic-header-top-left ul li:last-child {
-    margin-right: 0;
-}
-.ic-header .ic-header-top .ic-header-top-left ul li a[href] {
-    color: #0f1021;
-}
-.ic-header .ic-header-top .ic-header-top-left ul li a[href]:hover {
-    color: #003DA7;
-    text-decoration: underline;
-}
-.ic-header .ic-header-top .ic-header-top-left ul li i {
-    margin-right: 1.5rem;
-    color: #003DA7;
-}
-@media only screen and (max-width: 1200px) {
-    .ic-header .ic-header-top .ic-header-top-left ul li i {
-        margin-right: .5rem;
-    }
-}
-@media only screen and (max-width: 1200px) {
-    .ic-header .ic-header-top .ic-header-top-left ul li {
-        margin-right: 3rem;
-    }
-}
-.ic-header .ic-header-bottom {
-    padding: 2rem 0;
-}
-.ic-header .ic-header-bottom .ic-menu-wrapper.menu-fixed {
-    padding: 2rem 0;
+.header .header-bottom .menu-wrapper.menu-fixed {
+    padding: 20px 0;
     position: fixed;
     background: #fff;
     top: 0;
@@ -56,7 +17,7 @@
     z-index: 999;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.1) !important;
 }
-.ic-header .ic-header-bottom .ic-menu-area {
+.header .header-bottom .menu-area {
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -68,31 +29,31 @@
     -webkit-justify-content: space-between;
     justify-content: space-between;
 }
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu {
+.header .header-bottom .menu-area ul.main-menu {
     list-style: none;
     display: flex;
 }
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li {
+.header .header-bottom .menu-area ul.main-menu li {
     position: relative;
 }
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li a {
+.header .header-bottom .menu-area ul.main-menu li a {
     color: #0f1021;
     text-transform: uppercase;
     display: inline-block;
-    padding: 0 1.5rem;
+    padding: 0 15px;
     text-decoration: none;
 }
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li.active a,
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li a:hover {
+.header .header-bottom .menu-area ul.main-menu li.active a,
+.header .header-bottom .menu-area ul.main-menu li a:hover {
     color: #003DA7;
     font-weight: 500;
 }
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li::before {
+.header .header-bottom .menu-area ul.main-menu li::before {
     content: "";
     position: absolute;
-    height: 1rem;
-    width: 1rem;
-    bottom: -2rem;
+    height: 2.5px;
+    width: 20px;
+    bottom: -8px;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
@@ -100,41 +61,35 @@
     left: 50%;
     opacity: 0;
     visibility: hidden;
-    border-radius: 50%;
     background: #003DA7;
     -webkit-transition: all 0.25s ease-in-out;
     -moz-transition: all 0.25s ease-in-out;
     -o-transition: all 0.25s ease-in-out;
     transition: all 0.25s ease-in-out;
 }
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li:hover::before,
-.ic-header .ic-header-bottom .ic-menu-area ul.ic-main-menu li.active::before {
+.header .header-bottom .menu-area ul.main-menu li:hover::before,
+.header .header-bottom .menu-area ul.main-menu li.active::before {
     opacity: 1;
     visibility: visible;
     -webkit-transform: scale(1) translateX(-50%);
     transform: scale(1) translateX(-50%);
 }
 
-@media only screen and (min-width: 576px) {
-    header.ic-header .ic-mobile-menu a.ic-custom-btn-rvs {
-        display: none;
-    }
-}
 @media only screen and (min-width: 992px) {
-    header.ic-header .ic-mobile-menu-main {
+    header.header .mobile-menu-main {
         display: none !important;
     }
-    header.ic-header .ic-nav-icon {
+    header.header .nav-icon {
         display: none;
     }
 }
 @media only screen and (max-width: 991.98px) {
-    .ic-header-top-right,
-    .ic-main-menu-area .ic-main-menu {
+    .header-top-right,
+    .main-menu-area .main-menu {
         display: none !important;
     }
 
-    header.ic-header.ic-nav-open .ic-mobile-menu-main {
+    header.header.nav-open .mobile-menu-main {
         display: block !important;
         position: fixed;
         height: 100%;
@@ -145,69 +100,69 @@
         background-color: rgba(0, 0, 0, 0.5);
     }
 
-    header.ic-header .ic-mobile-menu {
+    header.header .mobile-menu {
         position: fixed;
         top: 0;
         right: 0;
-        width: 32rem;
+        width: 320px;
         height: 100vh;
         background: #fff;
-        padding: 6rem 4rem 4rem;
+        padding: 60px 40px 40px;
         z-index: 9999;
         overflow-y: auto;
-        -webkit-transform: translateX(35rem);
-        -ms-transform: translateX(35rem);
-        -o-transform: translateX(35rem);
-        transform: translateX(35rem);
+        -webkit-transform: translateX(350px);
+        -ms-transform: translateX(350px);
+        -o-transform: translateX(350px);
+        transform: translateX(350px);
         -webkit-transition: all 0.25s ease-in-out;
         -moz-transition: all 0.25s ease-in-out;
         -o-transition: all 0.25s ease-in-out;
         transition: all 0.25s ease-in-out;
     }
-    header.ic-header .ic-mobile-menu ul {
+    header.header .mobile-menu ul {
         margin: 0;
         list-style: none;
     }
-    header.ic-header .ic-mobile-menu ul li {
-        margin-bottom: 1.5rem;
+    header.header .mobile-menu ul li {
+        margin-bottom: 15px;
         position: relative;
     }
-    header.ic-header .ic-mobile-menu ul li:last-child {
+    header.header .mobile-menu ul li:last-child {
         margin-bottom: 0;
     }
-    header.ic-header .ic-mobile-menu ul li a {
-        font-size: 1.6rem;
+    header.header .mobile-menu ul li a {
+        font-size: 16px;
         color: #003DA7;
     }
 
-    .ic-mobile-menu-btn {
-        margin-top: 2rem;
+    .mobile-menu-btn {
+        margin-top: 20px;
     }
 
-    header.ic-header.ic-nav-open .ic-mobile-menu {
+    header.header.nav-open .mobile-menu {
         -webkit-transform: translateX(0);
         -ms-transform: translateX(0);
         -o-transform: translateX(0);
         transform: translateX(0);
     }
 
-    .ic-nav-burger {
+    .nav-burger {
         position: absolute;
-        top: 3rem;
-        right: 3.4rem;
+        top: 30px;
+        right: 34px;
     }
 
-    .ic-nav-icon {
+    .nav-icon {
         display: block;
         margin-top: -10px;
         margin-left: 25px;
     }
 
-    .ic-navbar-right .custom-btn {
+    .navbar-right .custom-btn {
         display: none;
     }
 
-    .ic-mobile-logo img {
+    .mobile-logo img {
         width: 220px;
     }
 }
@@ -259,7 +214,7 @@
     left: 0;
 }
 .hamburger .hamburger__line.hamburger__line--01 {
-    top: 1rem;
+    top: 10px;
     left: 0;
 }
 .hamburger .hamburger__line.hamburger__line--02 {
@@ -273,7 +228,7 @@
 .hamburger .hamburger__line.hamburger__line--cross01 {
     left: 3px;
     top: 17.5px;
-    width: 3.4rem;
+    width: 34px;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     -o-transform: rotate(45deg);
@@ -282,7 +237,7 @@
 .hamburger .hamburger__line.hamburger__line--cross02 {
     left: 3px;
     top: 17.5px;
-    width: 3.4rem;
+    width: 34px;
     -webkit-transform: rotate(-45deg);
     -ms-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
