--- a/src/components/ReiewItem/ReviewItem.css
+++ b/src/components/ReiewItem/ReviewItem.css
@@ -8,7 +8,6 @@
     overflow: hidden;
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
-    margin-bottom: 30px;
 }
 @media only screen and (max-width: 991.98px) and (min-width: 768px) {
     .review-items .review-item {
@@ -49,4 +48,5 @@
 .review-items .review-item .feedback-text {
     font-size: 14px;
     line-height: 25px;
+    margin-bottom: 0;
 }
